# myclaw

./: Cargo.toml  README.md
.github/workflows/: release.yml
config/: agent.toml  client.toml  relay.toml  server.toml
myclaw-agent/: Cargo.toml
myclaw-agent/src/: config.rs  main.rs  tunnel.rs
myclaw-client/: Cargo.toml
myclaw-client/src/: config.rs  main.rs  tui.rs  ws.rs
myclaw-common/: Cargo.toml
myclaw-common/src/: error.rs  lib.rs  protocol.rs
myclaw-relay/: Cargo.toml
myclaw-relay/src/: agent_side.rs  bridge.rs  config.rs  main.rs  server_side.rs
myclaw-server/: Cargo.toml
myclaw-server/src/: config.rs  gateway.rs  main.rs  router.rs  server.rs
