[package]
name = "myclaw-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
myclaw-common = { path = "../myclaw-common" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
